# scriptkiddie

./: Cargo.toml  README.md
.github/workflows/: rust.yml
scriptkiddie/: Cargo.toml
scriptkiddie-executor/: Cargo.toml
scriptkiddie-executor/src/: lib.rs
scriptkiddie-lexer/: Cargo.toml
scriptkiddie-lexer/src/: lexer.rs  lib.rs  token.rs
scriptkiddie-lexer/src/lexer/: keyword.rs  number.rs  operator.rs  string.rs  whitespace.rs  whitespace_comments.rs
scriptkiddie-parser/: Cargo.toml
scriptkiddie-parser/src/: ast.rs  lib.rs  parser.rs  syntax.rs
scriptkiddie-parser/src/parser/: declaration.rs  expression.rs
scriptkiddie-parser/src/syntax/: binary.rs
scriptkiddie/src/: main.rs
test/: functions.js  simple.js
