[package]
name = "scriptkiddie"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
scriptkiddie-lexer = {path = "../scriptkiddie-lexer"}
scriptkiddie-parser = {path = "../scriptkiddie-parser"}

[lints]
workspace = true
